--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,19 +65,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-
     //di
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-rc01'
-
-
     //retrofit
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
     // GSON
     implementation 'com.google.code.gson:gson:2.9.0'
-
+    //okhttp
     implementation("com.squareup.okhttp3:logging-interceptor:4.4.0")
+    //coil
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 }
