--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.squareup.sqldelight'
 }
 
 android {
@@ -78,4 +79,12 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.4.0")
     //coil
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+    // SQL Delight
+    implementation "com.squareup.sqldelight:android-driver:1.5.2"
+    implementation "com.squareup.sqldelight:coroutines-extensions-jvm:1.5.2"
+}
+sqldelight {
+    HeroDatabase {
+        packageName = "com.haberturm.tutuinternship"
+    }
 }
