--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     // SQL Delight
     implementation "com.squareup.sqldelight:android-driver:1.5.2"
     implementation "com.squareup.sqldelight:coroutines-extensions-jvm:1.5.2"
+    //swipe to refresh
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.4-alpha"
 }
 sqldelight {
     HeroDatabase {
