--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation "com.squareup.sqldelight:coroutines-extensions-jvm:1.5.2"
     //swipe to refresh
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.4-alpha"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
+    //reflection
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
 sqldelight {
     HeroDatabase {
